# tree-sitter-yadl

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: npm-treesitter-cli.yml  rust.yml
bindings/c/: tree-sitter-yadl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yadl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterYadl/: yadl.h
bindings/swift/TreeSitterYadlTests/: TreeSitterYadlTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignment.txt  comment.txt  control-flow.txt  if-statement-complex.txt  if-statement-end-only.txt  if-statement-simple.txt  if-statement.txt  return-number.txt  return-sting.txt  return-string.txt  two-strings-on-line.txt
