[package]
name = "tree-sitter-yadl"
description = "A simple data processing language"
version = "0.1.0"
authors = ["Dennis Schulze"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "yadl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/desc1998/yadl-zig"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
